--- a/src/styles/themes/proton/sidebar/panel.tabs.styl
+++ b/src/styles/themes/proton/sidebar/panel.tabs.styl
@@ -44,7 +44,7 @@
     box-shadow: 0 -10px 12px -10px #00000000, 0 -1px 0 0 #00000000
 
 .ScrollBox .bottom-shadow[data-show="true"] + .scroll-container .new-tab-btns
-  z-index: 10
+  z-index: 1000
   &:before
     box-shadow: 0 -10px 12px -10px #00000064, 0 -1px 0 0 #00000008
 
